# Finternet

./: .gitignore  CONTRIBUTING.md  README.md  deploy-contracts.bat  run-dev.ps1  start-hardhat.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/asset-service/: Dockerfile  go.mod  go.sum  main.go
backend/auth-service/: go.mod  go.sum  main.go
backend/ledger-service/: Cargo.toml  Dockerfile
backend/ledger-service/src/: main.rs
backend/payment-service/: Cargo.toml  Dockerfile
backend/payment-service/src/: main.rs
blockchain/solidity/: Dockerfile.hardhat  FinTokenMarketplace.sol  deployment.json  hardhat.config.js  package-lock.json  package.json
blockchain/solidity/contracts/: FinTokenAsset.sol  FinTokenMarketplace.sol
blockchain/solidity/scripts/: deploy.js
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  store.js
frontend/src/components/: AssetDetails.js  AssetHistory.js  BlockchainAssetCard.js  BlockchainConnect.js  BlockchainDataDisplay.js  BlockchainTransactionViewer.js  ContractInfoCard.js  DashboardLayout.js  DashboardWidget.js  EnhancedAssetManagement.js  EnhancedTransactionHistory.js  Footer.js  FormElements.js  GasFeeEstimator.js  LoadingSpinner.js  MfaSetup.js  MfaVerification.js  Navbar.js  NotificationCenter.js  OnboardingTour.js  PasswordStrengthMeter.js  ProtectedRoute.js  SavedSearches.js  (+4 more)
infrastructure/: docker-compose.yml
infrastructure/postgres-init/: init-db.sh
(+33 files in other folders)
