[package]
name = "ledger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.27.0", features = ["full"] }
